--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-
-<html>
+<html lang='pt-BR'>
 
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Julia Jeske - DoWhile 2021</title>
+
   <link rel="stylesheet" href="style.css">
- 
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
-  <title>Julia Jeske - DoWhile 2021</title>
+
 
 </head>
 
@@ -25,8 +28,9 @@
       </div>
 
       <h1 id="userName">Julia Jeske</h1>
-      <a id="userLink" href="https://github.com/JuliaJeske" target="_blanck"><img src="./images/github.svg" alt="icone github"> <span id="userLogin">jeskejulia</span>
-        </a>
+      <a id="userLink" href="https://github.com/JuliaJeske" target="_blanck"><img src="./images/github.svg"
+          alt="icone github"> <span id="userLogin">jeskejulia</span>
+      </a>
 
       <p id="userBio">
         An instructor focused on helping people start programming for web
@@ -44,14 +48,15 @@
               alt="icone instagram"></a>
         </li>
         <li class="twitter">
-          <a href="https://twitter.com/JeskeJulia" target="_blank"> <img src="./images/twitter.svg" alt="icone twitter"></a>
+          <a href="https://twitter.com/JeskeJulia" target="_blank"> <img src="./images/twitter.svg"
+              alt="icone twitter"></a>
         </li>
 
       </ul>
     </div>
 
   </main>
- <script src="main.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
